--- a/react-vite/src/components/Navigation/NavUser/NavUser.css
+++ b/react-vite/src/components/Navigation/NavUser/NavUser.css
@@ -11,6 +11,8 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 .user-nav-left {
@@ -29,6 +31,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  flex-wrap: nowrap;
 }
 
 li {
@@ -95,4 +98,85 @@ li a:hover {
 
 .user-nav-right li:nth-last-child(2) a:hover {
   background-color: #0052b3;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 1024px) {
+  .user-nav-left li:not(:first-child) {
+    display: none;
+  }
+  
+  .user-nav-right li input {
+    width: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .user-nav-container {
+    padding: 0 5px;
+  }
+  
+  .user-nav-left li:first-child {
+    margin-right: 5px;
+  }
+  
+  .user-nav-left li:first-child a {
+    padding: 0 10px;
+  }
+  
+  .user-nav-right li input {
+    width: 120px;
+    margin-right: 5px;
+  }
+  
+  li a, .user-nav-right li button {
+    padding: 0 8px;
+  }
+  
+  .user-nav-right li:nth-last-child(2) a {
+    padding: 6px 10px;
+    margin: 0 5px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .user-nav-container {
+    height: auto;
+    flex-direction: column;
+    padding: 10px 5px;
+  }
+  
+  .user-nav-left, .user-nav-right {
+    width: 100%;
+  }
+  
+  .user-nav-left ul, .user-nav-right ul {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .user-nav-left li:first-child {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+  
+  .user-nav-right li input {
+    width: 100%;
+    margin: 5px 0;
+    box-sizing: border-box;
+  }
+  
+  .user-nav-right li {
+    margin: 5px;
+  }
+  
+  li a, .user-nav-right li button {
+    line-height: normal;
+    padding: 8px;
+  }
+  
+  body {
+    margin-top: 120px;
+  }
 }
